# royco-day

./: .env.deploy.example  .env.example  .gitignore  .gitmodules  CLAUDE.md  FINDINGS.md  KNOWN_ISSUES.md  LICENSE.md  README.md  TEST_MIGRATION_HANDOFF.md  foundry.toml  lcov.info  testing-strategy.md
.github/workflows/: CI.yml  test.yml
gambit_out/: gambit_results.json
gambit_out/input_json/: AccountingSyncLogic.sol_json.ast.json  BlacklistLogic.sol_json.ast  Cache.sol_json.ast  Constants.sol_json.ast  FeeAndLiquidityPremiumLogic.sol_json.ast  IERC1363.sol_json.ast  IERC165.sol_json.ast  IERC20.sol_json.ast  IERC20Metadata.sol_json.ast  IRoycoBlacklist.sol_json.ast  IRoycoDayAccountant.sol_json.ast  IRoycoDayKernel.sol_json.ast  IRoycoSeniorTranche.sol_json.ast  IRoycoVaultTranche.sol_json.ast  Math.sol_json.ast  Panic.sol_json.ast  SafeCast.sol_json.ast  SafeERC20.sol_json.ast  SelfLiquidationLogic.sol_json.ast.json  SlotDerivation.sol_json.ast  TrancheClaimsLogic.sol_json.ast  TransientSlot.sol_json.ast  Types.sol_json.ast  Units.sol_json.ast  UtilizationLogic.sol_json.ast.json  ValuationLogic.sol_json.ast.json
script/: CheckMinedIds.s.sol  Deploy.s.sol
script/config/: DeploymentConfig.sol  DeploymentTypes.sol  EntryPointDeploymentConfig.sol  ExtraRoles.sol  FundamentalStablecoinChainlinkOracleDeploymentConfig.sol  MarketDeploymentConfig.sol  RoleConfigUtils.sol  SyncerDeploymentConfig.sol
script/independent/: DeployEntryPoint.s.sol  DeployPendleRoycoTrancheSYFactory.s.sol  (+5 more)
script/mine-market-id/: Cargo.toml  README.md
script/mine-market-id/src/: main.rs
(+1603 files in other folders)
